ubuntu-image (1.3+18.04ubuntu1) UNRELEASED; urgency=medium

  * Remove the snapcraft dependency by moving the gadget tree priming step away
    from ubuntu-image.  (LP: #1734655)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Mon, 27 Nov 2017 11:12:08 +0100

ubuntu-image (1.2+18.04ubuntu1) bionic; urgency=medium

  [ Łukasz 'sil2100' Zemczak ]
  * Add a generic hook mechanism and add our first supported snap-image hook:
    post-populate-rootfs.  (LP: #1672436)
  * Document the newly added hook API in the ubuntu-image manpage.
    (LP: #1715849)
  * Make sure ubuntu-image has 100% code-coverage after getting the classic
    image support added.

  [ Gary Wang ]
  * Add classic image creation support.  (LP: #1726391)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Mon, 31 Jul 2017 15:54:06 +0200

ubuntu-image (1.1+17.10ubuntu3) artful; urgency=medium

  * Only run the snap.sh test on github PRs as it doesn't make sense to run it
    as part of regular deb package migration.  (LP: #1704979)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Wed, 19 Jul 2017 15:31:06 +0200

ubuntu-image (1.1+17.10ubuntu1) artful; urgency=medium

  [ Łukasz 'sil2100' Zemczak ]
  * Fix snapcraft.yaml for classic snappage.  (LP: #1673576)
  * Add a new step in the builder that generates .manifest files listing all
    snaps installed in the resulting image.  (LP: #1680574)
  * Further fixes to snapcraft.yaml, making sure that we only have one
    ubuntu-image version installed in the snap.  (LP: #1692901)
  * Move files around during snap build to have all needed libraries and python
    files in common accessible paths, install missing dependencies into the
    snap.  (LP: #1694982, LP: #1694993)

  [ Michael Vogt ]
  * Use fakeroot when running mkfs.ext4.  (LP: #1702628)

  [ Steve Langasek ]
  * Add fakeroot to the snapcraft.yaml and as a test dep.  (LP: #1702628)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Fri, 21 Apr 2017 19:35:00 +0200
