@@ -2,6 +2,8 @@ ubuntu-image (1.3+18.04ubuntu1) UNRELEASED; urgency=medium
 
   * Remove the snapcraft dependency by moving the gadget tree priming step away
     from ubuntu-image.  (LP: #1734655)
+  * Add support for defining the livecd-rootfs configuration path through
+    an environment variable.  (LP: #1734949)
 
  -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Mon, 27 Nov 2017 11:12:08 +0100
 
